--- a/docs/.vuepress/styles/_reponsive.scss
+++ b/docs/.vuepress/styles/_reponsive.scss
@@ -10,7 +10,7 @@ $MQMobileNarrow: 419px !default;
       max-width: 250px;
     }
     .page .theme-default-content:not(.custom){
-      max-width: 1100px;
+      max-width: 80%;
       padding-left: 2rem;
       margin-left: 3rem;
       margin-right: 2rem;
@@ -18,7 +18,6 @@ $MQMobileNarrow: 419px !default;
     .page-meta{
       margin-left: 2rem;
     }
-
   }
   * {
     box-sizing: border-box;
@@ -48,8 +47,8 @@ $MQMobileNarrow: 419px !default;
       max-width: 250px;
     }
     .page .theme-default-content:not(.custom){
-      max-width: 1000px;
-      padding-left: 2rem;
+      max-width: 73%;
+      padding-left: 5rem;
       margin-left: 3rem;
       margin-right: 2rem;
     }
